Added to top navigation bar contents

--- a/index.html
+++ b/index.html
@@ -9,5 +9,28 @@
 </head>
 <body>
     
+    <nav>
+        <div class="navTop">
+            <div class="navBar-logo">
+                <img src="images/Logo-large-coloured.png" width="150px" height="150px" alt="image of AJOKE Clothiers logo">
+            </div>
+            <div class="navBar">
+                <div class="search">
+                    <input type="text" placeholder="What are you looking for?" class="searchInput">
+                    <img src="images/icons8-magnifier-48.png" width="24px" height="24px" class="searchIcon" alt="search icon image">
+                </div>
+            </div>
+            <div class="navBar">
+                <div class="right-navBar">
+                    <a href="index.html" class="navBar-link">Home</a>
+                    <a href="about.html" class="navBar-link">About</a>
+                    <a href="contact.html" class="navBar-link">Contact</a>
+                    <img src="images/icons8-cart-24.png" alt="image of a shopping cart">
+                </div>
+            </div>
+        </div>
+
+        <div class="navBottom"></div>
+    </nav>
 </body>
 </html>
