nav bar specifics

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <title>Ajoke Clothiers</title>
 </head>
 <body>
-    
+ 
     <nav>
         <div class="navTop">
             <div class="navBar-logo">
@@ -30,7 +30,16 @@
             </div>
         </div>
 
-        <div class="navBottom"></div>
+        <div class="navBottom">
+            <div class="left-navBottom">
+                <div class="navBar-logo">
+                    <img src="images/Logo-large-transparent.png" width="150px" height="150px" alt="image of AJOKE Clothiers logo">
+                </div>
+                <h5>&copy;2023 AJOKE Clothiers</h5>
+            </div>
+            <div class="right-navBottom"></div>
+        </div>
     </nav>
+    
 </body>
 </html>
