--- a/index.html
+++ b/index.html
@@ -12,15 +12,15 @@
     <nav>
         <div class="navTop">
             <div class="navBar-logo">
-                <img src="images/Logo-large-coloured.png" width="150px" height="150px" alt="image of AJOKE Clothiers logo">
+                <img src="images/Logo-large-coloured.png" width="100px" height="100px" alt="image of AJOKE Clothiers logo">
             </div>
-            <div class="navBar">
+            <div class="navBar-search">
                 <div class="search">
-                    <input type="text" placeholder="What are you looking for?" class="searchInput">
-                    <img src="images/icons8-magnifier-48.png" width="24px" height="24px" class="searchIcon" alt="search icon image">
+                    <input type="text" placeholder="Search" class="searchInput">
+                    <img src="images/icons8-search-48.png" width="28px" height="28px" class="searchIcon" alt="search icon image">
                 </div>
             </div>
-            <div class="navBar">
+            <div class="navBar-link">
                 <div class="right-navBar">
                     <a href="index.html" class="navBar-link">Home</a>
                     <a href="about.html" class="navBar-link">About</a>
@@ -40,6 +40,6 @@
             <div class="right-navBottom"></div>
         </div>
     </nav>
-    
+
 </body>
 </html>
