--- a/index.html
+++ b/index.html
@@ -8,38 +8,69 @@
     <title>Ajoke Clothiers</title>
 </head>
 <body>
- 
     <nav>
         <div class="navTop">
             <div class="navBar-logo">
                 <img src="images/Logo-large-coloured.png" width="100px" height="100px" alt="image of AJOKE Clothiers logo">
             </div>
-            <div class="navBar-search">
+            <div class="navBar">
                 <div class="search">
                     <input type="text" placeholder="Search" class="searchInput">
                     <img src="images/icons8-search-48.png" width="28px" height="28px" class="searchIcon" alt="search icon image">
                 </div>
             </div>
-            <div class="navBar-link">
-                <div class="right-navBar">
+            <div class="navBar">
+                <div class="navBar-right">
                     <a href="index.html" class="navBar-link">Home</a>
                     <a href="about.html" class="navBar-link">About</a>
                     <a href="contact.html" class="navBar-link">Contact</a>
-                    <img src="images/icons8-cart-24.png" alt="image of a shopping cart">
+                    <div class="navBar-cart">
+                        <img src="images/icons8-cart-24.png" alt="image of a shopping cart">
+                    </div>
                 </div>
             </div>
-        </div>
-
-        <div class="navBottom">
-            <div class="left-navBottom">
-                <div class="navBar-logo">
-                    <img src="images/Logo-large-transparent.png" width="150px" height="150px" alt="image of AJOKE Clothiers logo">
-                </div>
-                <h5>&copy;2023 AJOKE Clothiers</h5>
-            </div>
-            <div class="right-navBottom"></div>
         </div>
     </nav>
+    <header>
 
+    </header>
+    <div></div>
+    <div></div>
+    <hr>
+    <footer class="navBottom">
+        <div class="left-navBottom">
+            <div class="navBar-logo">
+                <img src="images/Logo-large-transparent.png" width="150px" height="150px" alt="image of AJOKE Clothiers logo">
+            </div>
+            <h5 >&copy;2023 AJOKE Clothiers</h5>
+            <div class="socials">
+                <div class="github"></div>
+                <div class="hire-me">
+                    <span>Hire me!</span>
+                </div>
+            </div>
+        </div>
+        <div class="right-navBottom">
+            <div>
+                <h3>Men's Fashion</h3>
+                <h3>Women's Fashion</h3>
+                <h3>Kid's Fashion</h3>
+                <h3>Unisex Designs</h3>
+                <h3>African Prints</h3>
+            </div>
+            <div>
+                <h3>FAQ</h3>
+                <h3>About</h3>
+                <h3>Contact</h3>
+                <h3>Home</h3>
+            </div>
+            <div>
+                <h3>Limited Offer!</h3>
+                <h3>My Cart</h3>
+                <h3>Register</h3>
+                <h3>Meet A Designer</h3>
+            </div>
+        </div>
+    </footer>
 </body>
 </html>
