--- a/index.html
+++ b/index.html
@@ -1,76 +1,235 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link href="https://fonts.googleapis.com/css2?family=Lato:wght@100;300;400;700;900&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="style.css">
-    <title>Ajoke Clothiers</title>
-</head>
-<body>
-    <nav>
-        <div class="navTop">
-            <div class="navBar-logo">
-                <img src="images/Logo-large-coloured.png" width="100px" height="100px" alt="image of AJOKE Clothiers logo">
-            </div>
-            <div class="navBar">
-                <div class="search">
-                    <input type="text" placeholder="Search" class="searchInput">
-                    <img src="images/icons8-search-48.png" width="28px" height="28px" class="searchIcon" alt="search icon image">
+    <head>
+        <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <link href="https://fonts.googleapis.com/css2?family=Lato:wght@100;300;400;700;900&display=swap" rel="stylesheet">
+        <link rel="stylesheet" href="style.css">
+        <title>Ajoke Clothiers</title>
+    </head>
+    <body>
+        <nav>
+            <div class="navTop">
+                <div class="navBar-logo">
+                    <img src="images/Logo-colour-bold.png" width="100px" height="100px" alt="image of AJOKE Clothiers logo">
                 </div>
-            </div>
-            <div class="navBar">
-                <div class="navBar-right">
-                    <a href="index.html" class="navBar-link">Home</a>
-                    <a href="about.html" class="navBar-link">About</a>
-                    <a href="contact.html" class="navBar-link">Contact</a>
-                    <div class="navBar-cart">
-                        <img src="images/icons8-cart-24.png" alt="image of a shopping cart">
+                <div class="navBar">
+                    <div class="search">
+                        <input type="text" placeholder="Search" class="searchInput">
+                        <img src="images/icons8-search-48.png" width="28px" height="28px" class="searchIcon" alt="search icon image">
+                    </div>
+                </div>
+                <div class="navBar">
+                    <div class="navBar-right">
+                        <a href="index.html" class="navBar-link">Home</a>
+                        <a href="about.html" class="navBar-link">About</a>
+                        <a href="contact.html" class="navBar-link">Contact</a>
+                        <div class="navBar-cart">
+                            <img src="images/icons8-cart-24.png" alt="image of a shopping cart">
+                        </div>
                     </div>
                 </div>
             </div>
-        </div>
-    </nav>
-    <header>
-
-    </header>
-    <div></div>
-    <div></div>
-    <hr>
-    <footer class="navBottom">
-        <div class="left-navBottom">
-            <div class="navBar-logo">
-                <img src="images/Logo-large-transparent.png" width="150px" height="150px" alt="image of AJOKE Clothiers logo">
-            </div>
-            <h5 >&copy;2023 AJOKE Clothiers</h5>
-            <div class="socials">
-                <div class="github"></div>
-                <div class="hire-me">
-                    <span>Hire me!</span>
+        </nav>
+        <header>
+            <p class="men-fashion">Men's Fashion</p>
+            <p class="women-fashion">Women's Fashion</p>
+            <p class="kid-fashion">Kid's Fashion</p>
+            <p class="unisex-fashion">Unisex Fashion</p>
+            <p class="african-prints">African Prints</p>
+            <p class="designers">Book A Designer</p>
+            <p class="countries-search">Browse Products by Countries</p>
+        </header>
+        <section class="men-fashion">
+            <div>Men's Fashion</div>
+            <div>
+                <div>
+                <img src="" alt="Image of an African man in native attire">
+                <p class="price">$60</p>
+                <button>Buy Now!</button>
+                </div>
+                <div>
+                    <img src="" alt="Image of an African man in native attire">
+                    <p class="price">$250</p>
+                    <button>Buy Now!</button>
+                </div>
+                <div>
+                    <img src="" alt="Image of an African man in native attire">
+                    <p class="price">$79.99</p>
+                    <button>Buy Now!</button>
+                </div>
+                <div>
+                    <img src="" alt="Image of an African man in native attire">
+                    <p class="price">$35</p>
+                    <button>Buy Now!</button>
+                </div>
+                <div>
+                    <img src="" alt="Image of an African man in native attire">
+                    <p class="price">$86</p>
+                    <button>Buy Now!</button>
                 </div>
             </div>
-        </div>
-        <div class="right-navBottom">
+        </section>
+        
+        <section class="women-fashion">
+            <div>Women's Fashion</div>
             <div>
-                <h3>Men's Fashion</h3>
-                <h3>Women's Fashion</h3>
-                <h3>Kid's Fashion</h3>
-                <h3>Unisex Designs</h3>
-                <h3>African Prints</h3>
+                <div>
+                <img src="" alt="Image of an African woman in native attire">
+                <p class="price">$110</p>
+                <button>Buy Now!</button>
+                </div>
+                <div>
+                    <img src="" alt="Image of an African woman in native attire">
+                    <p class="price">$250</p>
+                    <button>Buy Now!</button>
+                </div>
+                <div>
+                    <img src="" alt="Image of an African woman in native attire">
+                    <p class="price">$59.99</p>
+                    <button>Buy Now!</button>
+                </div>
+                <div>
+                    <img src="" alt="Image of an African woman in native attire">
+                    <p class="price">$350</p>
+                    <button>Buy Now!</button>
+                </div>
+                <div>
+                    <img src="" alt="Image of an African woman in native attire">
+                    <p class="price">$40</p>
+                    <button>Buy Now!</button>
+                </div>
             </div>
+        </section>
+        
+        <section class="kid-fashion">
+            <div>Kid's Fashion</div>
             <div>
-                <h3>FAQ</h3>
-                <h3>About</h3>
-                <h3>Contact</h3>
-                <h3>Home</h3>
+                <div>
+                <img src="" alt="Image of an African child in native attire">
+                <p class="price">$60</p>
+                <button>Buy Now!</button>
+                </div>
+                <div>
+                    <img src="" alt="Image of an African child in native attire">
+                    <p class="price">$250</p>
+                    <button>Buy Now!</button>
+                </div>
+                <div>
+                    <img src="" alt="Image of an African child in native attire">
+                    <p class="price">$79.99</p>
+                    <button>Buy Now!</button>
+                </div>
+                <div>
+                    <img src="" alt="Image of an African child in native attire">
+                    <p class="price">$35</p>
+                    <button>Buy Now!</button>
+                </div>
+                <div>
+                    <img src="" alt="Image of an African child in native attire">
+                    <p class="price">$86</p>
+                    <button>Buy Now!</button>
+                </div>
             </div>
+        </section>
+
+        <section class="unisex-fashion">
+            <div>Unisex Fashion</div>
             <div>
-                <h3>Limited Offer!</h3>
-                <h3>My Cart</h3>
-                <h3>Register</h3>
-                <h3>Meet A Designer</h3>
+                <div>
+                    <img src="" alt="Image of an African native attire">
+                    <p class="price">$60</p>
+                    <button>Buy Now!</button>
+                </div>
+                <div>
+                    <img src="" alt="Image of an African native attire">
+                    <p class="price">$250</p>
+                    <button>Buy Now!</button>
+                </div>
+                <div>
+                    <img src="" alt="Image of an African native attire">
+                    <p class="price">$79.99</p>
+                    <button>Buy Now!</button>
+                </div>
+                <div>
+                    <img src="" alt="Image of an African native attire">
+                    <p class="price">$35</p>
+                    <button>Buy Now!</button>
+                </div>
+                <div>
+                    <img src="" alt="Image of an African native attire">
+                    <p class="price">$86</p>
+                    <button>Buy Now!</button>
+                </div>
             </div>
-        </div>
-    </footer>
-</body>
+        </section>
+
+        <section class="african-prints">
+            <div>African Prints</div>
+            <div>
+                <div>
+                    <img src="" alt="Image of an African man in native attire">
+                    <p class="price">$60</p>
+                    <button>Buy Now!</button>
+                </div>
+                <div>
+                    <img src="" alt="Image of an African man in native attire">
+                    <p class="price">$250</p>
+                    <button>Buy Now!</button>
+                </div>
+                <div>
+                    <img src="" alt="Image of an African man in native attire">
+                    <p class="price">$79.99</p>
+                    <button>Buy Now!</button>
+                </div>
+                <div>
+                    <img src="" alt="Image of an African man in native attire">
+                    <p class="price">$35</p>
+                    <button>Buy Now!</button>
+                </div>
+                <div>
+                    <img src="" alt="Image of an African man in native attire">
+                    <p class="price">$86</p>
+                    <button>Buy Now!</button>
+                </div>
+            </div>
+        </section>
+
+        <footer class="navBottom">
+            <div class="left-navBottom">
+                <div class="navBar-logo">
+                    <img src="images/Logo-large-transparent.png" width="150px" height="150px" alt="image of AJOKE Clothiers logo">
+                </div>
+                <h5 >&copy;2023 AJOKE Clothiers</h5>
+                <div class="socials">
+                    <div class="github"></div>
+                    <div class="hire-me">
+                        <span>Hire me!</span>
+                    </div>
+                </div>
+            </div>
+            <div class="right-navBottom">
+                <div>
+                    <h3>Men's Fashion</h3>
+                    <h3>Women's Fashion</h3>
+                    <h3>Kid's Fashion</h3>
+                    <h3>Unisex Designs</h3>
+                    <h3>African Prints</h3>
+                </div>
+                <div>
+                    <h3>FAQ</h3>
+                    <h3>About</h3>
+                    <h3>Contact</h3>
+                    <h3>Home</h3>
+                    <h3>Register</h3>
+                </div>
+                <div>
+                    <h3>Limited Offer!</h3>
+                    <h3>My Cart</h3>
+                    <h3>Browse Product Categories</h3>
+                    <h3>Meet A Designer</h3>
+                </div>
+            </div>
+        </footer>
+    </body>
 </html>
