--- a/index.html
+++ b/index.html
@@ -168,31 +168,52 @@
             <div>African Prints</div>
             <div>
                 <div>
-                    <img src="" alt="Image of an African man in native attire">
+                    <img src="" alt="Image of native African print designs">
                     <p class="price">$60</p>
                     <button>Buy Now!</button>
                 </div>
                 <div>
-                    <img src="" alt="Image of an African man in native attire">
+                    <img src="" alt="Image of native African print designs">
                     <p class="price">$250</p>
                     <button>Buy Now!</button>
                 </div>
                 <div>
-                    <img src="" alt="Image of an African man in native attire">
+                    <img src="" alt="Image of native African print designs">
                     <p class="price">$79.99</p>
                     <button>Buy Now!</button>
                 </div>
                 <div>
-                    <img src="" alt="Image of an African man in native attire">
+                    <img src="" alt="Image of native African print designs">
                     <p class="price">$35</p>
                     <button>Buy Now!</button>
                 </div>
                 <div>
-                    <img src="" alt="Image of an African man in native attire">
+                    <img src="" alt="Image of native African print designs">
                     <p class="price">$86</p>
                     <button>Buy Now!</button>
                 </div>
             </div>
+        </section>
+
+        <section class="service-countries">
+            <p>
+                Our local designers are present in 13 countries across Africa, and we deliver to over 100 countries worldwide.
+                We offer the best services in the following countries:
+            </p>
+            <img src="images/icons8-nigeria-flag-48.png" alt="nigeria flag">
+            <img src="images/icons8-kenya-48.png" alt="kenya flag">
+            <img src="images/icons8-ghana-48.png" alt="ghana flag">
+            <img src="images/icons8-rwanda-48.png" alt="rwanda flag">
+            <img src="images/icons8-south-africa-48.png" alt="south africa flag">
+            <img src="images/icons8-tanzania-48.png" alt="tanzania flag">
+            <img src="images/icons8-uganda-48.png" alt="uganda flag">
+            <img src="images/icons8-zambia-48.png" alt="zambia flag">
+            <img src="images/icons8-zimbabwe-48.png" alt="zimbabwe flag">
+            <img src="images/icons8-cameroon-48.png" alt="cameroon flag">
+            <img src="images/icons8-senegal-48.png" alt="senegal flag">
+            <img src="images/icons8-ethiopia-48.png" alt="ethiopia flag">
+            <img src="images/icons8-egypt-48.png" alt="egypt flag">
+
         </section>
 
         <footer class="navBottom">
