Header section and Men's fashion section code

--- a/index.html
+++ b/index.html
@@ -42,31 +42,36 @@
         </header>
         <section class="men-fashion">
             <div>Men's Fashion</div>
-            <div>
-                <div>
-                <img src="" alt="Image of an African man in native attire">
-                <p class="price">$60</p>
-                <button>Buy Now!</button>
+            <div class="designs">
+                <div class="iconic-image">
+                    <img src="" alt="iconic image of a man in african attire">
                 </div>
-                <div>
-                    <img src="" alt="Image of an African man in native attire">
-                    <p class="price">$250</p>
-                    <button>Buy Now!</button>
-                </div>
-                <div>
-                    <img src="" alt="Image of an African man in native attire">
-                    <p class="price">$79.99</p>
-                    <button>Buy Now!</button>
-                </div>
-                <div>
-                    <img src="" alt="Image of an African man in native attire">
-                    <p class="price">$35</p>
-                    <button>Buy Now!</button>
-                </div>
-                <div>
-                    <img src="" alt="Image of an African man in native attire">
-                    <p class="price">$86</p>
-                    <button>Buy Now!</button>
+                <div class="designs-img">
+                    <div>
+                        <img src="" alt="Image of an African man in native attire">
+                        <p class="price">$60</p>
+                        <button>Buy Now!</button>
+                    </div>
+                    <div>
+                        <img src="" alt="Image of an African man in native attire">
+                        <p class="price">$250</p>
+                        <button>Buy Now!</button>
+                    </div>
+                    <div>
+                        <img src="" alt="Image of an African man in native attire">
+                        <p class="price">$79.99</p>
+                        <button>Buy Now!</button>
+                    </div>
+                    <div>
+                        <img src="" alt="Image of an African man in native attire">
+                        <p class="price">$35</p>
+                        <button>Buy Now!</button>
+                    </div>
+                    <div>
+                        <img src="" alt="Image of an African man in native attire">
+                        <p class="price">$86</p>
+                        <button>Buy Now!</button>
+                    </div>
                 </div>
             </div>
         </section>
