Updates to codebase

--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
         <link rel="stylesheet" href="style.css">
         <title>Ajoke Clothiers</title>
     </head>
+    
     <body>
         <nav>
             <div class="navTop">
@@ -36,11 +37,21 @@
             <p class="men-fashion">Men's Fashion</p>
             <p class="women-fashion">Women's Fashion</p>
             <p class="kid-fashion">Kid's Fashion</p>
-            <p class="unisex-fashion">Unisex Fashion</p>
+            <p class="adire-fashion">Adire Fashion</p>
             <p class="african-prints">African Prints</p>
             <p class="designers">Book A Designer</p>
             <p class="countries-search">Browse Products by Countries</p>
         </header>
+
+        <section class="landing-page">
+            <img src="" alt="">
+            <p>
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. 
+                Neque beatae inventore ipsam error harum quidem, laboriosam, 
+                temporibus quisquam consequatur necessitatibus at aut hic nostrum 
+                labore blanditiis quae voluptatem corporis autem?
+            </p>
+        </section>
 
         <section class="men-fashion">
             <div>
@@ -161,7 +172,7 @@
 
         <section class="unisex-fashion">
             <div>
-                <span>Unisex Fashion</span>
+                <span>Adire Fashion</span>
                 <button>See more</button>
             </div>
             <div class="designs">
